--- a/Data_Integration_&_Preparation_Phase_3.ipynb
+++ b/Data_Integration_&_Preparation_Phase_3.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "gpuType": "L4",
-      "authorship_tag": "ABX9TyMRqENdpm9yDR0Oz2hr0Sx0",
+      "authorship_tag": "ABX9TyMMdA4HgeMGXCRSF/6TjB99",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
         "# ============================================================================\n",
         "# AI-Enhanced Data-Driven Decision Making in MIS Research\n",
         "# Phase 3: Data Integration & Preparation (COMPREHENSIVE)\n",
-        "# Author: Research Team\n",
+        "# Author: Md Maruf Islam\n",
         "# Date: July 2025\n",
         "# Objective: Prepare final analytical dataset with missing data handling\n",
         "# ============================================================================\n"
