--- a/Ai_DDD_comp_phase_2.ipynb
+++ b/Ai_DDD_comp_phase_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNulvi+nZ14MDpRj1H4pq/T",
+      "authorship_tag": "ABX9TyPzTKKM2Cir9IriPTgew1tv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
         "# ============================================================================\n",
         "# AI-Enhanced Data-Driven Decision Making in MIS Research\n",
         "# Phase 2: Comprehensive AI Adoption Measurement (FINAL VERSION)\n",
-        "# Author: Research Team\n",
+        "# Author: Md Maruf Islam\n",
         "# Date: July 2025\n",
         "# Timeline: 2018-2024 SEC Filings Analysis\n",
         "# ============================================================================\n"
