--- a/Phase_5_Advanced_Statistical_Modeling.ipynb
+++ b/Phase_5_Advanced_Statistical_Modeling.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPUg5+FHow8Sq3yvaIEo/hT",
+      "authorship_tag": "ABX9TyNbQlNAFPQhZH4PGom6KuOO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
         "# ============================================================================\n",
         "# AI-Enhanced Data-Driven Decision Making in MIS Research\n",
         "# Phase 5: Advanced Statistical Modeling (COMPREHENSIVE FIXED VERSION)\n",
-        "# Author: Research Team\n",
+        "# Author: Md Maruf Islam\n",
         "# Date: July 2025\n",
         "# Objective: Academic-standard 5-model analysis with panel data and high R²\n",
         "# ============================================================================\n"
